fix restaurant timezone