@@ -1,6 +1,5 @@
 package dev.elias.restaurante.menu.service;
 
-import dev.elias.restaurante.catalog.entity.MealPlan;
 import dev.elias.restaurante.catalog.entity.MenuCategory;
 import dev.elias.restaurante.catalog.repository.MealPlanRepository;
 import dev.elias.restaurante.menu.dto.*;
@@ -13,6 +12,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.time.ZoneId;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -21,6 +21,15 @@ import java.util.Map;
 @Service
 public class PublicMenuService {
 
+    /*
+     * Fuso horário oficial utilizado pelo restaurante.
+     *
+     * Não dependemos do timezone da máquina,
+     * Docker ou Railway.
+     */
+    private static final ZoneId RESTAURANT_ZONE =
+            ZoneId.of("America/Sao_Paulo");
+
     private final DailyMenuRepository dailyMenuRepository;
     private final MealPlanRepository mealPlanRepository;
 
@@ -28,65 +37,96 @@ public class PublicMenuService {
             DailyMenuRepository dailyMenuRepository,
             MealPlanRepository mealPlanRepository
     ) {
-        this.dailyMenuRepository = dailyMenuRepository;
-        this.mealPlanRepository = mealPlanRepository;
+        this.dailyMenuRepository =
+                dailyMenuRepository;
+
+        this.mealPlanRepository =
+                mealPlanRepository;
     }
 
     @Transactional(readOnly = true)
     public PublicMenuResponse findTodayMenu() {
-        LocalDate today = LocalDate.now();
 
-        DailyMenu dailyMenu = dailyMenuRepository
-                .findByMenuDate(today)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException(
-                                "Não existe cardápio cadastrado para hoje"
-                        )
+        /*
+         * IMPORTANTE:
+         * usa a data no horário de São Paulo,
+         * e não a data do servidor.
+         */
+        LocalDate today =
+                LocalDate.now(
+                        RESTAURANT_ZONE
                 );
 
-        List<DailyMenuItem> availableItems = dailyMenu
-                .getItems()
-                .stream()
-                .filter(item ->
-                        Boolean.TRUE.equals(item.getAvailable())
-                )
-                .filter(item ->
-                        Boolean.TRUE.equals(
-                                item.getMenuItem().getActive()
+        DailyMenu dailyMenu =
+                dailyMenuRepository
+                        .findByMenuDate(today)
+                        .orElseThrow(() ->
+                                new ResourceNotFoundException(
+                                        "Não existe cardápio cadastrado para hoje"
+                                )
+                        );
+
+        List<DailyMenuItem> availableItems =
+                dailyMenu
+                        .getItems()
+                        .stream()
+                        .filter(item ->
+                                Boolean.TRUE.equals(
+                                        item.getAvailable()
+                                )
                         )
-                )
-                .sorted(
-                        Comparator.comparing(
-                                        (DailyMenuItem item) ->
-                                                item.getMenuItem()
-                                                        .getCategory()
-                                                        .getDisplayOrder()
+                        .filter(item ->
+                                Boolean.TRUE.equals(
+                                        item
+                                                .getMenuItem()
+                                                .getActive()
                                 )
-                                .thenComparing(
-                                        DailyMenuItem::getDisplayOrder
-                                )
-                                .thenComparing(
-                                        item -> item.getMenuItem().getName()
-                                )
-                )
-                .toList();
+                        )
+                        .sorted(
+                                Comparator
+                                        .comparing(
+                                                (DailyMenuItem item) ->
+                                                        item
+                                                                .getMenuItem()
+                                                                .getCategory()
+                                                                .getDisplayOrder()
+                                        )
+                                        .thenComparing(
+                                                DailyMenuItem::getDisplayOrder
+                                        )
+                                        .thenComparing(
+                                                item ->
+                                                        item
+                                                                .getMenuItem()
+                                                                .getName()
+                                        )
+                        )
+                        .toList();
 
         List<PublicMenuCategoryResponse> categories =
-                groupItemsByCategory(availableItems);
+                groupItemsByCategory(
+                        availableItems
+                );
 
         List<PublicMealPlanResponse> mealPlans =
                 mealPlanRepository
                         .findByActiveTrueOrderByPriceAsc()
                         .stream()
-                        .map(PublicMealPlanResponse::from)
+                        .map(
+                                PublicMealPlanResponse::from
+                        )
                         .toList();
 
         return new PublicMenuResponse(
                 dailyMenu.getId(),
                 dailyMenu.getMenuDate(),
-                dailyMenu.getDayOfWeek().name(),
+                dailyMenu
+                        .getDayOfWeek()
+                        .name(),
                 dailyMenu.getOpen(),
-                isCurrentlyAcceptingOrders(dailyMenu),
+                isCurrentlyAcceptingOrders(
+                        dailyMenu
+                ),
                 dailyMenu.getOpeningTime(),
                 dailyMenu.getClosingTime(),
                 dailyMenu.getNotes(),
@@ -95,42 +135,56 @@ public class PublicMenuService {
         );
     }
 
-    private List<PublicMenuCategoryResponse> groupItemsByCategory(
+    private List<PublicMenuCategoryResponse>
+    groupItemsByCategory(
             List<DailyMenuItem> availableItems
     ) {
-        Map<Long, List<DailyMenuItem>> itemsByCategory =
+
+        Map<Long, List<DailyMenuItem>>
+                itemsByCategory =
                 availableItems
                         .stream()
                         .collect(
-                                java.util.stream.Collectors.groupingBy(
-                                        item -> item
-                                                .getMenuItem()
-                                                .getCategory()
-                                                .getId(),
-                                        LinkedHashMap::new,
-                                        java.util.stream.Collectors.toList()
-                                )
+                                java.util.stream.Collectors
+                                        .groupingBy(
+                                                item ->
+                                                        item
+                                                                .getMenuItem()
+                                                                .getCategory()
+                                                                .getId(),
+                                                LinkedHashMap::new,
+                                                java.util.stream.Collectors
+                                                        .toList()
+                                        )
                         );
 
         return itemsByCategory
                 .values()
                 .stream()
-                .map(this::createCategoryResponse)
+                .map(
+                        this::createCategoryResponse
+                )
                 .toList();
     }
 
-    private PublicMenuCategoryResponse createCategoryResponse(
+    private PublicMenuCategoryResponse
+    createCategoryResponse(
             List<DailyMenuItem> categoryItems
     ) {
-        MenuCategory category = categoryItems
-                .getFirst()
-                .getMenuItem()
-                .getCategory();
 
-        List<PublicMenuItemResponse> items = categoryItems
-                .stream()
-                .map(PublicMenuItemResponse::from)
-                .toList();
+        MenuCategory category =
+                categoryItems
+                        .getFirst()
+                        .getMenuItem()
+                        .getCategory();
+
+        List<PublicMenuItemResponse> items =
+                categoryItems
+                        .stream()
+                        .map(
+                                PublicMenuItemResponse::from
+                        )
+                        .toList();
 
         return new PublicMenuCategoryResponse(
                 category.getId(),
@@ -147,22 +201,54 @@ public class PublicMenuService {
     private boolean isCurrentlyAcceptingOrders(
             DailyMenu dailyMenu
     ) {
-        if (!Boolean.TRUE.equals(dailyMenu.getOpen())) {
+
+        /*
+         * Fechado manualmente pelo admin.
+         */
+        if (!Boolean.TRUE.equals(
+                dailyMenu.getOpen()
+        )) {
             return false;
         }
 
-        LocalTime now = LocalTime.now();
+        /*
+         * Horário atual do restaurante.
+         *
+         * Exemplo:
+         * 20:15 em Patos/PB
+         * continua sendo 20:15,
+         * independentemente do servidor Railway.
+         */
+        LocalTime now =
+                LocalTime.now(
+                        RESTAURANT_ZONE
+                );
 
+        /*
+         * Ainda não abriu.
+         */
         if (
-                dailyMenu.getOpeningTime() != null
-                        && now.isBefore(dailyMenu.getOpeningTime())
+                dailyMenu.getOpeningTime()
+                        != null
+                        &&
+                        now.isBefore(
+                                dailyMenu.getOpeningTime()
+                        )
         ) {
             return false;
         }
 
+        /*
+         * Já passou ou chegou exatamente
+         * ao horário de fechamento.
+         */
         if (
-                dailyMenu.getClosingTime() != null
-                        && !now.isBefore(dailyMenu.getClosingTime())
+                dailyMenu.getClosingTime()
+                        != null
+                        &&
+                        !now.isBefore(
+                                dailyMenu.getClosingTime()
+                        )
         ) {
             return false;
         }
